--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,23 @@
       <artifactId>postgresql</artifactId>
       <version>42.6.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.4.0.CR1</version>
+      <type>pom</type>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.4.0.CR1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>SpringMVCTask1</finalName>
