--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
       <artifactId>hibernate-core</artifactId>
       <version>6.4.0.CR1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>3.2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>SpringMVCTask1</finalName>
