--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
       <artifactId>spring-data-jpa</artifactId>
       <version>3.2.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-commons -->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-commons</artifactId>
+      <version>4.1.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>SpringMVCTask1</finalName>
